Fix childrenRect calculation

Because the 'bottom' and 'right' variables were both initialized to 0,
the bottom right corner of the children rect was clamped to
coordinates >= (0, 0).

Additionally, replace FLT_MAX with the more appropriate
std::numeric_limits<qreal>::max().

Task-number: QTBUG-38732
Change-Id: I073b0b44737cf1faed5e4f6a5d466dd830d451bf
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>